[package]
name = "snmp_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
csnmp = { path = "../csnmp" }
csv = "1.3.0"
dhat = "0.3.2"
eframe = "0.24.1"
egui = "0.24.1"
egui_dock = "0.9.1"
egui_extras = "0.24.2"
json = "0.12.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
